<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <TextView
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_gravity="center"
            android:text="@string/app_desc"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content"/>

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="text"
                android:id="@+id/login_edtNisn"
                android:hint="@string/login_nisn"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pass"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tombol Login -->
        <Button
            android:background="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:id="@+id/login_btnLogin"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="@string/login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>