<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfilFragment">

    <!-- Header -->
    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/profil_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profil_gambar"
            android:layout_marginTop="20dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:src="@drawable/person"
            android:layout_gravity="center"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_width="110dp"
            android:layout_height="110dp"/>

        <TextView
            android:id="@+id/profil_nama"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/profil_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/profil_nisn"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/profil_nisn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <!-- Tombol Profil -->
    <LinearLayout
        android:background="@color/yellow"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/profil_ubahpassword"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_baseline_lock_person_24"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <TextView
                android:layout_gravity="center"
                android:text="@string/profil_ubahpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/profil_logout"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_baseline_logout_24"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <TextView
                android:layout_gravity="center"
                android:text="@string/profil_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Detail Profil -->
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Jenis Kelamin -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:textStyle="bold"
                android:text="Jenis Kelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textAlignment="textEnd"
                android:id="@+id/profil_jeniskelamin"
                android:text="Laki - laki"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- Telp -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:textStyle="bold"
                android:text="Kontak Telp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textAlignment="textEnd"
                android:id="@+id/profil_kontak"
                android:text="085277121548"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- Kamar -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:textStyle="bold"
                android:text="Kamar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textAlignment="textEnd"
                android:id="@+id/profil_kamar"
                android:text="Nama Kamar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- Alamat -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:textStyle="bold"
                android:text="Alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textAlignment="textEnd"
                android:id="@+id/profil_alamat"
                android:text="Jl. Gatot Subroto No. 12345"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- Nama Wali -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:textStyle="bold"
                android:text="Nama Orang Tua/Wali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textAlignment="textEnd"
                android:id="@+id/profil_ortu"
                android:text="Gabriel Lono, S. Kom"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>